z-index to fix layers

--- a/static/CSS/hero.css
+++ b/static/CSS/hero.css
@@ -1,4 +1,4 @@
-.hero{
+.hero {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -6,11 +6,28 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+    position: relative;
+    z-index: 10;
+  }
+  
+.hero::before {
+    content: "";  
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(-180deg, rgba(0, 0, 0, 0), black);
+    z-index: 1;
+  }
 
 header{
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 10;
 }
 
 .main{
@@ -19,17 +36,14 @@ header{
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 10;
 }
 
 .footer{
     display: flex;
     flex-flow: row;
     justify-content: flex-end;
-}
-
-.gradient{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-image: linear-gradient(-180deg, rgba(0,0,0,0), black);
+    position: relative;
+    z-index: 10;
 }
